--- a/package.json
+++ b/package.json
@@ -4,7 +4,12 @@
   "author": "Chris Dorward <listingslab@gmail.com> (http://listingslab.com)",
   "description": "Isomorphic JavaScript Invitation App",
   "keywords": [
-    "isomorphic", "javascript", "node.js", "Koa", "react","webpack"
+    "isomorphic",
+    "javascript",
+    "node.js",
+    "Koa",
+    "react",
+    "webpack"
   ],
   "license": "MIT",
   "repository": {
@@ -21,7 +26,6 @@
     "koa": "^1.2.0",
     "koa-better-body": "^2.0.0",
     "koa-request": "^1.0.0",
-    "koa-routing": "^1.3.1",
     "koa-static": "^2.0.0"
   },
   "devDependencies": {}
