--- a/package.json
+++ b/package.json
@@ -23,13 +23,9 @@
   "dependencies": {
     "clear": "0.0.1",
     "colors": "^1.1.2",
-    "fs-extra": "^0.28.0",
-    "koa": "^1.2.0",
-    "koa-better-body": "^2.0.0",
-    "koa-mount": "^1.3.0",
-    "koa-request": "^1.0.0",
-    "koa-router": "^5.4.0",
-    "koa-static": "^2.0.0"
+    "koa": "^1.2.0"
   },
-  "devDependencies": {}
+  "devDependencies": {
+    "gulp": "^3.9.1"
+  }
 }
