--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "node.js",
     "Koa",
     "react",
-    "webpack"
+    "webpack",
+    "gulp"
   ],
   "license": "MIT",
   "repository": {
@@ -23,9 +24,12 @@
   "dependencies": {
     "clear": "0.0.1",
     "colors": "^1.1.2",
-    "koa": "^1.2.0"
+    "koa": "^1.2.0",
+    "koa-mount": "^1.3.0"
   },
   "devDependencies": {
-    "gulp": "^3.9.1"
+    "del": "^2.2.0",
+    "gulp": "^3.9.1",
+    "run-sequence": "^1.1.5"
   }
 }
