--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "clear": "0.0.1",
     "colors": "^1.1.2",
     "koa": "^1.2.0",
-    "koa-mount": "^1.3.0"
+    "koa-mount": "^1.3.0",
+    "koa-route": "^2.4.2"
   },
   "devDependencies": {
     "del": "^2.2.0",
