--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "colors": "^1.1.2",
     "koa": "^1.2.0",
     "koa-mount": "^1.3.0",
-    "koa-route": "^2.4.2"
+    "koa-route": "^2.4.2",
+    "koa-static": "^2.0.0"
   },
   "devDependencies": {
     "del": "^2.2.0",
