--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "koa": "^1.2.0",
     "koa-mount": "^1.3.0",
     "koa-route": "^2.4.2",
-    "koa-static": "^2.0.0"
+    "koa-static": "^2.0.0",
+    "moment": "^2.13.0"
   },
   "devDependencies": {
     "del": "^2.2.0",
