--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "koa-mount": "^1.3.0",
     "koa-route": "^2.4.2",
     "koa-static": "^2.0.0",
+    "lodash": "^4.11.1",
     "moment": "^2.13.0"
   },
   "devDependencies": {
