--- a/package.json
+++ b/package.json
@@ -32,8 +32,24 @@
     "moment": "^2.13.0"
   },
   "devDependencies": {
+    "babel": "^6.5.2",
+    "babel-core": "^6.7.6",
+    "babel-eslint": "^6.0.2",
+    "babel-loader": "^6.2.4",
+    "babel-preset-es2015": "^6.6.0",
+    "babel-preset-react": "^6.5.0",
+    "css-loader": "^0.23.1",
     "del": "^2.2.0",
+    "eslint": "^2.7.0",
+    "eslint-loader": "^1.3.0",
+    "eslint-plugin-react": "^4.3.0",
     "gulp": "^3.9.1",
-    "run-sequence": "^1.1.5"
+    "jshint": "^2.9.1",
+    "jshint-loader": "^0.8.3",
+    "jsx-loader": "^0.13.2",
+    "run-sequence": "^1.1.5",
+    "style-loader": "^0.13.1",
+    "webpack": "^1.12.14",
+    "webpack-dev-server": "^1.14.1"
   }
 }
