--- a/package.json
+++ b/package.json
@@ -19,7 +19,10 @@
   },
   "main": "start.js",
   "scripts": {
-    "start": "node start.js"
+    "start": "node start.js",
+    "build": "clear && webpack --optimize-minimize && gulp --silent",
+    "dev": "clear && webpack-dev-server --port 1976 --inline --progress --hot --content-base public --history-api-fallback",
+    "lint": "eslint . --ext .js --ext .jsx || true"
   },
   "dependencies": {
     "clear": "0.0.1",
@@ -29,7 +32,10 @@
     "koa-route": "^2.4.2",
     "koa-static": "^2.0.0",
     "lodash": "^4.11.1",
-    "moment": "^2.13.0"
+    "moment": "^2.13.0",
+    "react": "^15.0.1",
+    "react-dom": "^15.0.1",
+    "react-router": "^2.3.0"
   },
   "devDependencies": {
     "babel": "^6.5.2",
