--- a/package.json
+++ b/package.json
@@ -20,20 +20,25 @@
   "main": "start.js",
   "scripts": {
     "start": "node start.js",
-    "api": "nodemon server/dev_api.js",
+    "api": "nodemon server/dev.js",
     "build": "clear && webpack --optimize-minimize && node start.js",
-    "dev": "clear && nodemon server/dev_api.js && webpack-dev-server --port 1968 --inline --progress --hot --content-base public --history-api-fallback",
+    "dev": "clear && webpack-dev-server --port 1968 --inline --progress --hot --content-base public --history-api-fallback",
     "lint": "eslint . --ext .js --ext .jsx || true"
   },
   "dependencies": {
     "clear": "0.0.1",
+    "co-body": "^4.0.0",
+    "co-monk": "~1.0.0",
+    "co-views": "^2.1.0",
     "colors": "^1.1.2",
     "koa": "^1.2.0",
-    "koa-mount": "^1.3.0",
+    "koa-logger": "^1.3.0",
+    "koa-mongo": "^0.5.0",
     "koa-route": "^2.4.2",
     "koa-static": "^2.0.0",
     "lodash": "^4.11.1",
     "moment": "^2.13.0",
+    "monk": "~0.8.1",
     "react": "^15.0.1",
     "react-dom": "^15.0.1",
     "react-router": "^2.3.0"
