--- a/package.json
+++ b/package.json
@@ -51,7 +51,9 @@
     "babel-preset-es2015": "^6.6.0",
     "babel-preset-react": "^6.5.0",
     "css-loader": "^0.23.1",
+    "cssnext-loader": "^1.0.1",
     "del": "^2.2.0",
+    "dsv-loader": "^1.0.3",
     "eslint": "^2.7.0",
     "eslint-loader": "^1.3.0",
     "eslint-plugin-react": "^4.3.0",
