--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "jshint": "^2.9.1",
     "jshint-loader": "^0.8.3",
     "jsx-loader": "^0.13.2",
+    "postcss-nested": "^1.0.0",
     "run-sequence": "^1.1.5",
     "style-loader": "^0.13.1",
     "webpack": "^1.12.14",
