--- a/package.json
+++ b/package.json
@@ -46,7 +46,7 @@
   "devDependencies": {
     "babel": "^6.5.2",
     "babel-core": "^6.7.6",
-    "babel-eslint": "^6.0.2",
+    "babel-eslint": "^6.0.4",
     "babel-loader": "^6.2.4",
     "babel-preset-es2015": "^6.6.0",
     "babel-preset-react": "^6.5.0",
@@ -60,8 +60,10 @@
     "gulp": "^3.9.1",
     "jshint": "^2.9.1",
     "jshint-loader": "^0.8.3",
+    "json-loader": "^0.5.4",
     "jsx-loader": "^0.13.2",
-    "postcss-nested": "^1.0.0",
+    "postcss": "^5.0.19",
+    "postcss-nested": "0.3.2",
     "run-sequence": "^1.1.5",
     "style-loader": "^0.13.1",
     "webpack": "^1.12.14",
