--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "lint": "eslint . --ext .js --ext .jsx || true"
   },
   "dependencies": {
+    "can-use-dom": "^0.1.0",
     "clear": "0.0.1",
     "co-body": "^4.0.0",
     "co-monk": "~1.0.0",
@@ -39,8 +40,10 @@
     "lodash": "^4.11.1",
     "moment": "^2.13.0",
     "monk": "~0.8.1",
-    "react": "^15.0.1",
+    "react": "^15.0.2",
+    "react-addons-update": "^15.0.2",
     "react-dom": "^15.0.1",
+    "react-google-maps": "^4.10.1",
     "react-router": "^2.3.0"
   },
   "devDependencies": {
