--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "koa-mongo": "^0.5.0",
     "koa-route": "^2.4.2",
     "koa-static": "^2.0.0",
+    "lodash": "^4.11.1",
     "moment": "^2.13.0",
     "monk": "~0.8.1",
     "react": "^15.0.2",
