--- a/package.json
+++ b/package.json
@@ -41,7 +41,8 @@
     "monk": "~0.8.1",
     "react": "^15.0.2",
     "react-dom": "^15.0.1",
-    "react-router": "^2.3.0"
+    "react-router": "^2.3.0",
+    "rx": "^4.1.0"
   },
   "devDependencies": {
     "babel": "^6.5.2",
